# PyNLO

./: .gitignore  CLAUDE.md  README.rst  pyproject.toml  pyrightconfig.json  setup.py
docs/: build.bat  index.html  update_api.bat
docs/autosummary/: generate.py
docs/source/: about.rst  conf.py  contents.rst  examples.rst  fourier_transforms.ipynb  guides.rst  index.rst  linear_optics.ipynb  nonlinear_optics.ipynb  notes.rst  overview.rst  supplemental.ipynb
docs/source/_templates/: class - Copy (2).rst  class - Copy.rst  class.rst  (+4 more)
edf/: RE.nb  README.md  edfa_wsplice.py  instructions.md  re_nlse_joint_5level.py  re_nlse_joint_5level_wsplice.py
edf/utility/: __init__.py
examples/: intra-pulse_DFG.py  optical-solitons.py  ppln_cascaded-chi2.py  ppln_mismatched-shg.py  silica-pcf_anomalous.py  silica-pcf_supercontinuum.py
examples/edfa_examples/: kuse_figure9_nalm.py  kuse_figure9_nalm_2gf.py  menlo_figure9_pbs.py  re_only_5level.py  simple_edfa.py
examples/eydfa_examples/: eo_short_pulse_gen.py  re_only_7level.py  simple_eydfa.py
examples/pynlo_examples/: optical-solitons.py  phase-matching.py  silica-pcf_supercontinuum.py
eydf/: README.md  eydfa.py  re_nlse_joint_7level.py  seven_level_ss_eqns.py
pynlo/: README.md  __init__.py  device.py  fft.py  light.py  materials.py  media.py  model.py
pynlo/utility/: __init__.py  blit.py  chi1.py  chi2.py  chi3.py  clipboard.py  fft.py  misc.py
tests/: test_light.py  test_utility.py
ydf/ytterbium cross-section/: absorption cross section.csv  emission cross section.csv  notes.txt  plot_yb_cross_sections.py
(+302 files in other folders)
